# python-rookie

./: LICENSE  README.md  main.py  pyproject.toml
.cursor/rules/: current-progress.mdc  index.mdc  python-rookie.mdc  teaching-guidelines.mdc
.trae/rules/: project_rules.md
session01/: README.md  demo.py  tutorial.md
session01/assets/: constants.py
session01/examples/: example1.py  example2.py  example3.py
session01/exercises/: README.md  exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py
session01/project/: README.md  main.py
session02/: README.md  demo.py  tutorial.md
session02/examples/: example1.py  example2.py  example3.py
session02/exercises/: README.md  exercise1.py  exercise2.py  exercise3.py
session02/project/: README.md  constants.py  main.py  user_manager.py  utils.py
session03/: README.md  demo.py  tutorial.md
session03/examples/: example1.py  example2.py  example3.py
session03/exercises/: README.md  exercise1.py  exercise2.py  exercise3.py
session03/project/: README.md  bmi_calculator.py  config.py  run.py  simple_bmi.py  test_bmi.py
session04/: README.md  demo.py  tutorial.md
session04/examples/: example1.py  example2.py  example3.py
session04/exercises/: README.md  exercise1.py  exercise2.py  exercise3.py
session04/project/: README.md  config.py  main.py  simple_game.py
session05/: README.md  demo.py  run_demo.py  tutorial.md
session05/examples/: example1.py  example2.py  example3.py
session05/exercises/: exercise1.py  exercise2.py
session05/project/: README.md  cli_interface.py  student_manager.py
session06/: README.md  demo.py  tutorial.md
session06/examples/: example1.py  example2.py  example3.py
session06/exercises/: exercise1.py  exercise2.py
session06/project/: README.md  text_processor.py
session07/: README.md  demo.py  tutorial.md
session07/examples/: example1.py  example2.py  example3.py  example4.py  example5.py
session07/exercises/: exercise1.py  exercise2.py
session07/project/: README.md  config.py  main.py  requirements.txt
session08/: README.md  demo.py  tutorial.md
session08/examples/: example1.py  example2.py  example3.py
session08/exercises/: README.md  exercise1.py  exercise2.py  exercise3.py
session08/project/: README.md  bank_account_system.py
session09/: README.md  demo.py  tutorial.md
session09/examples/: example1_inheritance.py  example2_polymorphism.py  example3_encapsulation.py
session09/exercises/: exercise1_inheritance.py  exercise2_polymorphism.py  exercise3_encapsulation.py
session09/project/: README.md  zoo_management.py
session10/: README.md  demo.py  tutorial.md
session10/examples/: example1.py  example2.py  example3.py
session10/exercises/: exercise1.py  exercise2.py
session10/project/: README.md  config.py  main.py  requirements.txt  run.py  sample_data.csv  sample_data.json  sample_log.txt  test_modules.py
session11/: README.md  demo.py  tutorial.md
session11/examples/: basic_exceptions.py  custom_exceptions.py  debugging_demo.py  logging_demo.py
session11/exercises/: exercises.py  solutions.py
session12/: README.md  demo.py  tutorial.md
session12/examples/: array_basics.py  math_operations.py  statistical_analysis.py
session12/exercises/: exercise1.py  exercise2.py  exercise3.py
session12/project/: README.md  requirements.txt  stock_analyzer.py
session12/solutions/: exercise1_solution.py  exercise2_solution.py  exercise3_solution.py  stock_analyzer_solution.py
session13/: README.md  demo.py  tutorial.md
session13/examples/: data_analysis.py  data_cleaning.py  dataframe_basics.py  time_series.py
session13/exercises/: advanced_exercises.py  basic_exercises.py
session13/project/: data_analysis_project.py
session13/solutions/: advanced_solutions.py  basic_solutions.py
session14/: README.md  demo.py  tutorial.md
session14/assets/: useful_apis.md
session14/examples/: example1.py  example2.py  example3.py
session14/exercises/: README.md  exercise1.py  exercise2.py  exercise3.py
session14/project/: README.md  config.py  weather_app.py
session15/: README.md  demo.py  tutorial.md
session15/examples/: example1.py  (+2 more)
session16/: README.md  demo.py  tutorial.md
session17/: README.md  demo.py  tutorial.md
session18/: README.md  demo.py  tutorial.md
session19/: README.md  demo.py  requirements.txt  tutorial.md
session20/: README.md  tutorial.md
session21/: README.md  demo.py  tutorial.md
session22/: README.md  demo.py  pytest.ini  requirements.txt  run_examples.py  tutorial.md
session23/: QUICKSTART.md  README.md  SUMMARY.md  demo.py  install_tools.py  run_demo.py  tutorial.md
session23/exercises/solutions/: exercise1_solution.py  exercise2_solution.py  mypy.ini  pyproject.toml
session24/: README.md  demo.py  tutorial.md
session25/: README.md  demo.py  tutorial.md
session26/: README.md  demo.py  summary.md  tutorial.md
session27/: README.md  demo.py  tutorial.md
session28/: README.md  demo.py  tutorial.md
session29/: README.md  demo.py  tutorial.md
session30/: README.md  demo.py  requirements.txt  tutorial.md
(+203 files in other folders)
